<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.claresti.financeapp.FragmentAcerca">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contenedor">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_DesarrolladoPor"
            android:text="@string/desarrollado_acerca"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textColor="#000"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/logo"
            android:padding="15dp"
            android:id="@+id/acerca"
            android:layout_below="@id/txt_DesarrolladoPor"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_claresTI"
            android:layout_below="@id/acerca"
            android:text="@string/autor_acerca"
            android:textAlignment="center"
            android:textColor="#000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_Donativos"
            android:layout_below="@id/txt_claresTI"
            android:text="@string/donativos_acerca"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:textColor="#000"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/paypal"
            android:layout_below="@id/txt_Donativos"
            android:id="@+id/btn_donativo"/>

    </RelativeLayout>

</FrameLayout>
