<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityMovimiento">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/movimiento_titulo"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white_color"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@color/grey_60"
            app:tabIndicatorHeight="2dp"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/TextAppearance.Subhead.Bold"
            app:theme="@style/Toolbar.Light"
            >

            <android.support.design.widget.TabItem
                android:id="@+id/tab_ingreso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/icono_ingreso"
                android:text="@string/movimiento_ingreso" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_egreso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/icono_egreso"
                android:text="@string/movimiento_egreso" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_transferencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:icon="@drawable/icono_transferencia"
                android:text="@string/movimiento_transferencia" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_horizontal_forms"
            android:layout_marginStart="@dimen/margin_horizontal_forms"
            android:layout_marginRight="@dimen/margin_horizontal_forms"
            android:layout_marginEnd="@dimen/margin_horizontal_forms"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_monto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_inputs_forms"
                app:hintTextAppearance="@style/TextLabel"
                >

                <EditText
                    android:id="@+id/input_monto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:hint="@string/movimiento_monto"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_concepto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextLabel"
                >

                <EditText
                    android:id="@+id/input_concepto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/movimiento_concepto"
                    android:textColor="@color/text_color"
                    android:inputType="text"
                    android:textSize="16sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_inputs_forms"
                >

                <ImageView
                    android:id="@+id/movimiento_categoria_icono"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icono_categoria"
                    android:src="@drawable/icon_categories"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:tint="@color/white_color"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/movimiento_categoria_icono"
                    app:hintTextAppearance="@style/TextLabel"
                    >

                    <EditText
                        android:id="@+id/input_categoria"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:hint="@string/movimiento_categoria"
                        android:inputType="text"
                        android:textSize="16sp"/>

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_inputs_forms"
                android:text="@string/movimiento_cuenta"
                android:textColor="@color/hint_color"
                android:textSize="15sp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spin_cuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_below="@+id/spin_cuenta"
                    android:background="@color/colorPrimaryDark"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/text_cuenta_destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_inputs_forms"
                android:text="@string/movimiento_cuenta_destino"
                android:textColor="@color/hint_color"
                android:textSize="15sp"
                android:visibility="gone"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spin_accountTransfer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:visibility="gone"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_below="@+id/spin_accountTransfer"
                    android:background="@color/colorPrimaryDark"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_inputs_forms"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/calendar"
                    app:hintTextAppearance="@style/TextLabel"
                    >

                    <EditText
                        android:id="@+id/input_fecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:hint="@string/movimiento_fecha"
                        android:inputType="text"
                        android:textSize="16sp"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/calendar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/icono_categoria"
                    android:src="@drawable/icon_calendar"
                    android:padding="4dp"
                    android:scaleType="centerInside"
                    android:tint="@color/white_color"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_buttons_submit"
                android:layout_marginTop="@dimen/margin_important_forms"
                android:layout_marginBottom="@dimen/margin_important_forms"
                android:text="@string/movimiento_button_registro"
                android:textColor="@color/white_color"
                android:background="@drawable/background_buttons_colored"
                android:textSize="@dimen/text_size_buttons_forms"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>