<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CategoryFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_forms"
            android:layout_marginStart="@dimen/margin_forms"
            android:layout_marginRight="@dimen/margin_forms"
            android:layout_marginEnd="@dimen/margin_forms"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_inputs_forms"
                app:hintTextAppearance="@style/TextLabel"
                >

                <EditText
                    android:id="@+id/input_nombre_cuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:hint="@string/nombreCuenta_ACuenta"
                    android:inputType="text"
                    android:textSize="16sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_inputs_forms"
                app:hintTextAppearance="@style/TextLabel"
                >

                <EditText
                    android:id="@+id/input_descripcion_cuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:hint="@string/descripcionCuenta_ACuenta"
                    android:inputType="text"
                    android:textSize="16sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_inputs_forms"
                app:hintTextAppearance="@style/TextLabel"
                >

                <EditText
                    android:id="@+id/input_descripcion_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:hint="@string/descripcionCuenta_money"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_guardar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_buttons_submit"
                android:layout_marginTop="@dimen/margin_important_forms"
                android:layout_marginBottom="@dimen/margin_important_forms"
                android:textColor="@color/white_color"
                android:background="@drawable/background_buttons_colored"
                android:text="@string/registrarCuenta_ACuenta"
                android:textSize="@dimen/text_size_buttons_forms"
                />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
